--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.483.0",
     "next": "14.2.25",
+    "nodemailer": "^6.10.0",
     "react": "^18",
     "react-dom": "^18"
   },
